Bug 67611 - FORMATTING: Text animation “As one object” removes the animation
Summary: FORMATTING: Text animation “As one object” removes the animation
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.5.0 Beta0
Hardware: All All
: low major
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: needsDevEval
Depends on:
Blocks:
 
Reported: 2013-08-01 08:07 UTC by bugquestcontri
Modified: 2018-07-26 15:16 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Test file (19.27 KB, application/vnd.oasis.opendocument.presentation)
2013-08-01 08:07 UTC, bugquestcontri
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bugquestcontri 2013-08-01 08:07:43 UTC
Created attachment 83418 [details]
Test file

Problem description: 
When in any entry animation is applied to a text box  and the effect option "As one object" is selected, the animation disappears after clicking OK

Steps to reproduce:
1 - create anty text box using text icon (T) or use the content text box 
2 - write more than 1 line
3 - select any entry enimation click OK and get Fig1
4 - right click on animation in “Modify effect” window
5 - select: Effect options > Text Animation > As one object
6 - Result the animation scheme disappears Fig2

Workaround: select “All paragraphs at once”.

Current behavior:
sffect option "as one object" removes the animation

Expected behavior:
effect option As one object can be used

              
Operating System: Windows XP
Version: 4.0.4.2 release
Comment 1 Joel Madero 2013-08-01 17:28:18 UTC
Thank you for reporting this issue! I have been able to confirm the issue on:
Version 3.5.beta0 
Platform: Bodhi Linux 2.2 x64
+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
As I've been able to confirm this problem on an earlier release I am changing the version number as version is the earliest version that we can confirm the bug, we use comments to say that the bug exists in newer versions as well.

Marking as:

New (confirmed)
Major - technically a loss of data but easy to fix
Low - this has been around probably since the fork from OOo and no one else seems to have noticed. Plus easy workaround


Steps:
1. Insert a text frame
2. Insert any animation
3. Right click on animation (bottom third of task pane)
4. Left click Effects Options
5. Left click Text Options
6. Group text "as one object" 

Push ok



+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + 
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 2 J22Gim 2014-02-19 15:52:46 UTC
The bug is still present in Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71

In a side-comment, and as requested by others, I think the the "As one object" should be the default.
Comment 3 Joel Madero 2014-02-27 23:03:33 UTC
In order to limit the confusion between ProposedEasyHack and EasyHack and to make queries much easier we are changing ProposedEasyHack to NeedsDevEval.

Thank you and apologies for the noise
Comment 4 Robinson Tryon (qubit) 2015-12-13 11:21:10 UTC Comment hidden (obsolete)
Comment 5 QA Administrators 2017-01-03 19:50:04 UTC Comment hidden (obsolete)
Comment 6 Commit Notification 2018-06-24 01:54:20 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2862e598d87214aefd8a12d7d083c3fc8da11b57

tdf#67611 re-add the effect if nothing is left in the textgroup.

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2018-07-25 08:57:05 UTC
A polite ping to Mark Hung:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing?
Thanks