tdf#67611 re-add the effect if nothing is left in the textgroup.

Unlike regular shape object whose shape effect were kept
after change text grouping to "as object", the effects of
all the outline objects were removed. Re-add the effect
if nothing is left there.

Change-Id: I6d06fad709639f2d2976f6027b8d193f66893c90
Reviewed-on: https://gerrit.libreoffice.org/55973
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>